Resolve "Erstellen des Service LehrerPersonalabschnittsdatenService"