@@ -1,9 +1,11 @@
 package de.svws_nrw.service.lehrer;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatException;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anySet;
 import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -14,10 +16,12 @@ import java.util.Set;
 import de.svws_nrw.db.dto.current.schild.lehrer.DTOLehrerAbschnittsdaten;
 import de.svws_nrw.db.dto.current.schild.lehrer.DTOLehrerMehrleistung;
 import de.svws_nrw.db.dto.current.schild.schule.DTOSchuljahresabschnitte;
+import de.svws_nrw.db.utils.ApiOperationException;
 import de.svws_nrw.repo.lehrer.LehrerAbschnittsdatenRepository;
 import de.svws_nrw.repo.lehrer.LehrerMehrleistungRepository;
 import de.svws_nrw.repo.schule.SchuljahresabschnitteRepository;
 
+import jakarta.ws.rs.core.Response;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -43,13 +47,13 @@ class LehrerMehrleistungServiceKontextTest {
 		kontext = LehrerMehrleistungServiceKontext.of(repoSchuljahr, repoAbschnitt, repoMehrleistung);
 	}
 
-	private void mockSetup(final long idMehrleistung, final long idAbschnitt, final long idSchuljahresabschnitt) {
-		final var mehrleistung = new DTOLehrerMehrleistung(idMehrleistung, idAbschnitt, "160");
-		final var abschnitt = new DTOLehrerAbschnittsdaten(idAbschnitt, 42L, idSchuljahresabschnitt);
-		final var schuljahresabschnitt = new DTOSchuljahresabschnitte(idSchuljahresabschnitt, 2024, 1);
+	private void mockSetup(final long idMehrleistung) {
+		final var mehrleistung = new DTOLehrerMehrleistung(idMehrleistung, 100L, "160");
+		final var abschnitt = new DTOLehrerAbschnittsdaten(100L, 42L, 200L);
+		final var schuljahresabschnitt = new DTOSchuljahresabschnitte(200L, 2024, 1);
 
 		lenient().when(repoMehrleistung.findListByIds(List.of(idMehrleistung))).thenReturn(List.of(mehrleistung));
-		lenient().when(repoAbschnitt.findListByIds(Set.of(idAbschnitt))).thenReturn(List.of(abschnitt));
+		lenient().when(repoAbschnitt.findListByIds(Set.of(100L))).thenReturn(List.of(abschnitt));
 		lenient().when(repoSchuljahr.getAll()).thenReturn(List.of(schuljahresabschnitt));
 	}
 
@@ -58,8 +62,7 @@ class LehrerMehrleistungServiceKontextTest {
 	void ofCreatesInstance() {
 		final long idMehrleistung = 1L;
 		final long idAbschnitt = 100L;
-		final long idSchuljahr = 200L;
-		mockSetup(idMehrleistung, idAbschnitt, idSchuljahr);
+		mockSetup(idMehrleistung);
 
 		final var newKontext = LehrerMehrleistungServiceKontext.of(repoSchuljahr, repoAbschnitt, repoMehrleistung);
 
@@ -76,11 +79,11 @@ class LehrerMehrleistungServiceKontextTest {
 	@Test
 	@DisplayName("fetch: Lädt Mehrleistungen und kaskadiert korrekt zu Abschnitten und Schuljahren")
 	void fetch() {
-		mockSetup(1L, 100L, 200L);
+		mockSetup(1L);
 		final var result = kontext.fetch(List.of(1L));
 
 		assertThat(result).hasSize(1);
-		assertThat(result.get(0).id).isEqualTo(1L);
+		assertThat(result.getFirst().id).isEqualTo(1L);
 		final var abschnitt = kontext.getLehrerAbschnitt(100L);
 		assertThat(abschnitt).isNotNull();
 		assertThat(abschnitt.Schuljahresabschnitts_ID).isEqualTo(200L);
@@ -94,7 +97,7 @@ class LehrerMehrleistungServiceKontextTest {
 	@Test
 	@DisplayName("create: Erzeugt neue DTOs mit den IDs und fügt diese zum Cache hinzu")
 	void create() {
-		mockSetup(500L, 100L, 200L);
+		mockSetup(500L);
 		when(repoMehrleistung.getNextID()).thenReturn(500L);
 
 		final var patch = new LehrerMehrleistungCreateRequest();
@@ -105,7 +108,7 @@ class LehrerMehrleistungServiceKontextTest {
 		final var list = kontext.create(List.of(patch));
 
 		assertThat(list).hasSize(1);
-		assertThat(list.get(0).id).isEqualTo(500L);
+		assertThat(list.getFirst().id).isEqualTo(500L);
 
 		verify(repoAbschnitt).findListByIds(anySet());
 		verify(repoSchuljahr).getAll();
@@ -117,8 +120,7 @@ class LehrerMehrleistungServiceKontextTest {
 	void fetchByLehrerabschnittsdatenId() {
 		final long idMehrleistung = 1L;
 		final long idAbschnitt = 100L;
-		final long idSchuljahresabschnitt = 200L;
-		mockSetup(idMehrleistung, idAbschnitt, idSchuljahresabschnitt);
+		mockSetup(idMehrleistung);
 
 		final var mehrleistung = new DTOLehrerMehrleistung(idMehrleistung, idAbschnitt, "");
 		when(repoMehrleistung.getMapByIdsLehrerAbschnittsdaten(List.of(idAbschnitt)))
@@ -127,7 +129,7 @@ class LehrerMehrleistungServiceKontextTest {
 		final var result = kontext.fetchByLehrerabschnittsdatenId(idAbschnitt);
 
 		assertThat(result).hasSize(1);
-		assertThat(result.get(0).id).isEqualTo(idMehrleistung);
+		assertThat(result.getFirst().id).isEqualTo(idMehrleistung);
 		assertThat(kontext.getMehrleistung(idMehrleistung)).isNotNull();
 	}
 
@@ -135,7 +137,7 @@ class LehrerMehrleistungServiceKontextTest {
 	@DisplayName("persist: Delegiert den gesamten Cache-Inhalt an das Repository-Update")
 	void persistEntities() {
 		final long id = 1L;
-		mockSetup(id, 100L, 200L);
+		mockSetup(id);
 		final var loaded = kontext.fetch(List.of(id));
 
 		kontext.persist(loaded);
@@ -148,13 +150,95 @@ class LehrerMehrleistungServiceKontextTest {
 	@DisplayName("delete: Löscht alle Entitäten, die sich aktuell im Cache befinden")
 	void deleteEntities() {
 		final long id = 1L;
-		mockSetup(id, 100L, 200L);
+		mockSetup(id);
 
 		final var loaded = kontext.fetch(List.of(id));
 
 		kontext.delete(loaded);
 
 		verify(repoMehrleistung).delete(loaded);
+	}
+
+	@Test
+	@DisplayName("fetch: wirft NOT_FOUND wenn nicht alle IDs gefunden werden")
+	void fetch_throwsNotFound_whenNotAllFound() {
+		when(repoMehrleistung.findListByIds(List.of(1L, 2L)))
+				.thenReturn(List.of(new DTOLehrerMehrleistung(1L, 100L, "160")));
+
+		assertThatException().isThrownBy(() -> kontext.fetch(List.of(1L, 2L)))
+				.isExactlyInstanceOf(ApiOperationException.class)
+				.satisfies(e -> assertThat(((ApiOperationException) e).getStatus()).isEqualTo(Response.Status.NOT_FOUND));
+
+		verify(repoAbschnitt, never()).findListByIds(anySet());
+		verify(repoSchuljahr, never()).getAll();
+	}
+
+	@Test
+	@DisplayName("fetch: wirft INTERNAL_SERVER_ERROR wenn Abschnittsdaten fehlen")
+	void fetch_throwsInternalServerError_whenAbschnittMissing() {
+		final var mehrleistung = new DTOLehrerMehrleistung(1L, 100L, "160");
+
+		when(repoMehrleistung.findListByIds(List.of(1L))).thenReturn(List.of(mehrleistung));
+		// absichtlich: Abschnitt nicht gefunden
+		when(repoAbschnitt.findListByIds(Set.of(100L))).thenReturn(List.of());
+
+		assertThatException().isThrownBy(() -> kontext.fetch(List.of(1L)))
+				.isExactlyInstanceOf(ApiOperationException.class)
+				.satisfies(e -> assertThat(((ApiOperationException) e).getStatus()).isEqualTo(Response.Status.INTERNAL_SERVER_ERROR));
+
+		verify(repoSchuljahr, never()).getAll();
+	}
+
+	@Test
+	@DisplayName("fetchMapByAbschnittIds: delegiert und prefetch't Abschnitt + Schuljahr")
+	void fetchMapByAbschnittIds_delegatesAndPrefetches() {
+		final var ids = List.of(100L, 200L);
+
+		when(repoMehrleistung.getListByIdLehrerAbschnittsdaten(ids)).thenReturn(Map.of(
+				100L, List.of(new DTOLehrerMehrleistung(1L, 100L, "160")),
+				200L, List.of()
+		));
+
+		when(repoAbschnitt.findListByIds(ids)).thenReturn(List.of(
+				new DTOLehrerAbschnittsdaten(100L, 42L, 300L),
+				new DTOLehrerAbschnittsdaten(200L, 42L, 301L)
+		));
+		when(repoSchuljahr.getAll()).thenReturn(List.of(
+				new DTOSchuljahresabschnitte(300L, 2024, 1),
+				new DTOSchuljahresabschnitte(301L, 2025, 1)
+		));
+
+		final var result = kontext.fetchMapByAbschnittIds(ids);
+
+		assertThat(result).containsKeys(100L, 200L);
+
+		// Cache wurde befüllt (Abschnitt & Schuljahr)
+		assertThat(kontext.getLehrerAbschnitt(100L)).isNotNull();
+		assertThat(kontext.getSchuljahresabschnitt(300L)).isNotNull();
+
+		verify(repoMehrleistung).getListByIdLehrerAbschnittsdaten(ids);
+		verify(repoAbschnitt).findListByIds(ids);
+		verify(repoSchuljahr).getAll();
+	}
+
+	@Test
+	@DisplayName("fetchByLehrerabschnittsdatenId: kein Treffer -> leere Liste, Cache leer")
+	void fetchByLehrerabschnittsdatenId_noResult_returnsEmpty() {
+		final long idAbschnitt = 100L;
+
+		when(repoMehrleistung.getMapByIdsLehrerAbschnittsdaten(List.of(idAbschnitt))).thenReturn(Map.of());
+		when(repoAbschnitt.findListByIds(Set.of())).thenReturn(List.of());
+		when(repoSchuljahr.getAll()).thenReturn(List.of());
+
+		final var result = kontext.fetchByLehrerabschnittsdatenId(idAbschnitt);
+
+		assertThat(result).isEmpty();
+		assertThat(kontext.getMehrleistung(1L)).isNull();
+		assertThat(kontext.getLehrerAbschnitt(idAbschnitt)).isNull();
+
+		verify(repoMehrleistung).getMapByIdsLehrerAbschnittsdaten(List.of(idAbschnitt));
+		verify(repoAbschnitt).findListByIds(Set.of());
+		verify(repoSchuljahr).getAll();
 	}
 
 }
